# mobile.lark

./: README.md  pubspec.yaml  run.sh
.lark/: .gitignore  Cargo.toml  Gemfile  README.md  openapi.yaml  package.json  swagger.sh
.lark/.cargo/: config
.lark/actix/: lib.rs  main.rs
.lark/reql/: reql.rb
.lark/src/: main.rs
.lark/tests/: api_test.py
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/lark/: MainActivity.java
android/app/src/main/kotlin/com/example/lark/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  scaffold.dart
lib/components/: tabbar.dart
lib/models/: login.dart  main.dart  tabbar.dart
lib/pages/: chats.dart  contacts.dart  discover.dart  login.dart  scaffold.dart
lib/rethinkdb_data/: log_file
