[package]
name = "actix-server"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
publish=false

[[bin]]
name = "actix-server"
path = "actix/main.rs"

[lib]
path = "actix/lib.rs"

[dependencies]
hex = "0.3.2"
log = "0.4.6"
uuid = "0.7.4"
rand = "0.6.5"
env_logger = "0.6.1"
actix-web = "1.0.0-rc"